Fix sidemenu spacing

--- a/src/css/organisms/navigation.pcss
+++ b/src/css/organisms/navigation.pcss
@@ -31,5 +31,5 @@
 }
 
 .nav-gradient {
-  background-color: linear-gradient(140deg, theme('colors.gradients.dark-navy') 0%, theme('colors.gradients.black') 100%);
+  background: linear-gradient(140deg, theme('colors.gradients.dark-navy') 0%, theme('colors.gradients.black') 100%);
 }
